2020-06-11  Karl Berry  <karl@freefriends.org>

	* capconv.html (transform_subtitles): wrap beet entries containing
	"-" or "dash" or "Dash" in <nobr>.
	* capaccum-title.pl (output_title_list): let's use every 100 titles.
	(print_all_by_title): wrap  entire <ul>..</ul> in <small>
	instead of each individual <li>, for better line spacing.	

2020-06-09  Karl Berry  <karl@freefriends.org>

	* capconv.pl (transform_subtitles): take title and author arguments
	in order to avoid one item per line for beet columns.
	(capsule_convert): change call.
	* capdata-xlate.pl (xlate_dump_count): more clues when reporting
	an unused translation.
	* capin.pl: doc fix.
	* lists-unifications.txt,
	* lists-translations.txt (\NMHamiltonKelly): use hex code points to
	preserve {} in output. Use \CONNECT in other entry to match new
	transform_subtitles convention.
	* tb123capsule.txt: the ,\\ before Vytas is now one special case
	too many; omit the \\.
	* tb32capsule.txt: use "{} " instead of "\ " to simplify.
	* tb72capsule.txt: ctan https, pst-pdf replaced ps4pdf.

2020-06-01  Karl Berry  <karl@freefriends.org>

	* Makefile (outone): define differently on different machines.

	* tb72capsule.txt,
	* tb77capsule.txt,
	* tb84capsule.txt,
	* tb87capsule.txt,
	* tb88capsule.txt,
	* tb92capsule.txt,
	* tb94capsule.txt,
	* tb95capsule.txt,
	* tb97capsule.txt,
	* tb99capsule.txt,
	* tb100capsule.txt,
	* tb101capsule.txt,
	* tb102capsule.txt,
	* tb103capsule.txt,
	* tb104capsule.txt,
	* tb105capsule.txt,
	* tb106capsule.txt,
	* tb107capsule.txt,
	* tb108capsule.txt,
	* tb109capsule.txt,
	* tb113capsule.txt,
	* tb116capsule.txt,
	* tb119capsule.txt: glisterings subtitles.

2020-04-26  Karl Berry  <karl@tug.org>

	* lists-unifications.txt (Alban Grimm): no "Prof." in name list.
	* tb127capsule.txt: new issue.
	* tb126capsule.txt: now public.

2020-03-12  Karl Berry  <karl@freefriends.org>

	* lists-unifications.txt (Humanities): unify with Philology.

2019-11-27  Karl Berry  <karl@freefriends.org>