@@ -126,7 +126,7 @@
 
 \capsule{}%subsec
         {Letters}
-        {Petr~Ol\v{s}ak}
+        {Petr~Ol\v{s}\'ak}
         {Reply}
         {}
         {93-93\offset{.5}}
