@@ -83,7 +83,7 @@
 
 \capsule{}%subsec
         {Software \& Tools}
-        {Shinsaku~Fujita \and~Nobuya~Tanaka}
+        {Shinsaku~Fujita \and Nobuya~Tanaka}
         {{XyMTeX~(Version 2.00) as implementation of the XyM{} notation and the~XyM{}~markup language}}
         {}
         {7-14}
