@@ -83,7 +83,7 @@ other TeX projects.
 
 \capsule{}
         {Typography}
-        {Jacques Andre}
+        {Jacques Andr\'e}
         {The Cassetin project---Towards an inventory of ancient types and the related standardised encoding}
         {}
         {314-314}
@@ -205,7 +205,7 @@ other TeX projects.
 
 \capsule{}
         {Software \& Tools}
-        {Jer\^ome Laurens}
+        {J\'er\^ome Laurens}
         {iTeXMac, an integrated TeX environment for Mac OSX}
         {}
         {420-420}
@@ -368,7 +368,7 @@ other TeX projects.
 
 \capsule{}
         {Fonts}
-        {Anish Mehta, Gabor Bella, Yannis Haralambous}
+        {Anish Mehta, G\'abor Bella, Yannis Haralambous}
         {Adapting Omega to OpenType fonts}
         {}
         {550-550}
