@@ -51,7 +51,7 @@ other TeX projects.
 
 \capsule{}
         {Electronic Documents}
-        {Wlodzimierz Bzyl and  Tomasz Przechlewski}
+        {W\l{}odzimierz Bzyl and  Tomasz Przechlewski}
         {Migrating to XML: The case of the GUST Bulletin archive}
         {}
         {13-13}
@@ -129,7 +129,7 @@ other TeX projects.
 
 \capsule{}
         {Omega}
-        {Yannis Haralambous and Gabor Bella}
+        {Yannis Haralambous and G\'abor Bella}
         {OpenType and  OMEGA: Past, present and future}
         {}
         {66-66}
@@ -175,7 +175,7 @@ other TeX projects.
 
 \capsule{}
         {Software \& Tools}
-        {Jer\^ome Laurens}
+        {J\'er\^ome Laurens}
         {iTeXMac: An integrated TeX environment for Mac OSX}
         {}
         {85-85}
